--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/soundengineer-website/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>soundengineer-website</title>
-    <script type="module" crossorigin src="/soundengineer-website/assets/main-BtSSQQ3e.js"></script>
-    <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/main-CM1BV9iz.js">
+    <script type="module" crossorigin src="/soundengineer-website/assets/main-tLKLeZpg.js"></script>
+    <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/main-BEkp6O1d.js">
     <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/renderUtils-CK7oqR45.js">
     <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/modalUtils-DrQWLGV4.js">
-    <link rel="stylesheet" crossorigin href="/soundengineer-website/assets/main-CiGZlB_4.css">
+    <link rel="stylesheet" crossorigin href="/soundengineer-website/assets/main-D6Fgb5V6.css">
   </head>
   <body
     class="bg-bg-primary text-white font-montserrat min-h-screen flex flex-col"
@@ -62,7 +62,7 @@
             class="size-full bg-radial-[circle_at_85%_50%] from-transparent to-55% to-black opacity-40"
           ></div>
         </div>
-        <div class="custom-container h-screen flex items-center relative">
+        <div class="custom-container h-dvh flex items-center relative">
           <div>
             <div class="mb-25px">
               <h1 class="text-[32px] font-bold mb-[15px]">
