--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/soundengineer-website/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>soundengineer-website</title>
-    <script type="module" crossorigin src="/soundengineer-website/assets/main-tLKLeZpg.js"></script>
+    <script type="module" crossorigin src="/soundengineer-website/assets/main-tUX2Ed-7.js"></script>
     <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/main-BEkp6O1d.js">
-    <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/renderUtils-CK7oqR45.js">
+    <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/renderUtils-CQWDP5it.js">
     <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/modalUtils-DrQWLGV4.js">
     <link rel="stylesheet" crossorigin href="/soundengineer-website/assets/main-D6Fgb5V6.css">
   </head>
@@ -115,7 +115,7 @@
               быстро и чисто. Звук для меня — часть интерфейса мира.
             </p>
           </div>
-          <a href="/about.html" class="link">
+          <a href="./about.html" class="link">
             Подробнее
             <svg class="arrow -rotate-90">
               <use href="./sprite.svg#arrow" />
