--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/soundengineer-website/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>soundengineer-website</title>
     <script type="module" crossorigin src="/soundengineer-website/assets/main-tUX2Ed-7.js"></script>
@@ -127,7 +127,7 @@
         <div class="custom-container py-12.5">
           <div class="flex justify-between mb-25px items-end">
             <h2 class="text-2xl font-semibold">Популярные услуги</h2>
-            <a class="link" href="/services.html">
+            <a class="link" href="./services.html">
               Все услуги
               <svg class="arrow -rotate-90">
                 <use href="./sprite.svg#arrow" />
@@ -152,7 +152,7 @@
         <div class="custom-container py-12.5">
           <div class="flex justify-between items-end mb-25px">
             <h2 class="text-2xl font-semibold">Портфолио</h2>
-            <a class="link" href="/portfolio.html">
+            <a class="link" href="./portfolio.html">
               Все работы
               <svg class="arrow -rotate-90">
                 <use href="./sprite.svg#arrow" />
@@ -178,7 +178,7 @@
             />
             <div class="flex-[1_1_400px] flex flex-col gap-25px items-center">
               <div class="flex flex-col gap-25px" data-review-container></div>
-              <a class="link" href="/reviews.html">
+              <a class="link" href="./reviews.html">
                 Все отзывы
                 <svg class="arrow -rotate-90">
                   <use href="./sprite.svg#arrow" />
