--- a/reviews.html
+++ b/reviews.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/soundengineer-website/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <title>services</title>
     <script type="module" crossorigin src="/soundengineer-website/assets/reviews-aGRlrHD-.js"></script>
     <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/main-BEkp6O1d.js">
