fixed deployment and footer responsiveness

--- a/contacts.html
+++ b/contacts.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <title>services</title>
   </head>
   <body
@@ -11,9 +11,9 @@
   >
     <header class="bg-bg-secondary fixed top-0 left-0 right-0 z-1">
       <div class="custom-container py-[15px] flex justify-between items-center">
-        <a href="/" class="flex items-end gap-2.5 z-20">
+        <a href="./" class="flex items-end gap-2.5 z-20">
           <svg class="h-[35px] w-[35px] fill-current">
-            <use href="/sprite.svg#wave" />
+            <use href="./sprite.svg#wave" />
           </svg>
           <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
@@ -90,9 +90,9 @@
     </main>
     <footer class="bg-bg-secondary">
       <div
-        class="custom-container py-7.5 flex flex-wrap gap-25px justify-center items-center sm:justify-between"
+        class="custom-container py-7.5 flex flex-wrap gap-12.5 justify-center items-center md:justify-between"
       >
-        <div class="flex gap-25px items-center">
+        <div class="flex gap-25px items-center flex-wrap justify-center">
           <h2 class="text-2xl text-additional">Контакты</h2>
           <ul class="flex flex-col gap-2.5">
             <li>
@@ -108,14 +108,14 @@
                 <li>
                   <a href="https://web.telegram.org">
                     <svg class="fill-additional w-25px aspect-square">
-                      <use href="/sprite.svg#telegram" />
+                      <use href="./sprite.svg#telegram" />
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="https://www.tiktok.com/explore">
                     <svg class="fill-additional w-25px aspect-square">
-                      <use href="/sprite.svg#tiktok" />
+                      <use href="./sprite.svg#tiktok" />
                     </svg>
                   </a>
                 </li>
@@ -138,9 +138,9 @@
             </li>
           </ul>
         </div>
-        <a href="/" class="flex items-end gap-2.5 hover:opacity-100">
+        <a href="./" class="flex items-end gap-2.5 hover:opacity-100">
           <svg class="h-[35px] w-[35px] fill-current">
-            <use href="/sprite.svg#wave" />
+            <use href="./sprite.svg#wave" />
           </svg>
           <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
