--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>soundengineer-website</title>
   </head>
@@ -11,9 +11,9 @@
   >
     <header class="bg-bg-secondary fixed top-0 left-0 right-0 z-1">
       <div class="custom-container py-[15px] flex justify-between items-center">
-        <a href="/" class="flex items-end gap-2.5 z-20">
+        <a href="./" class="flex items-end gap-2.5 z-20">
           <svg class="h-[35px] w-[35px] fill-current">
-            <use href="/sprite.svg#wave" />
+            <use href="./sprite.svg#wave" />
           </svg>
           <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
@@ -57,7 +57,7 @@
             class="size-full bg-radial-[circle_at_85%_50%] from-transparent to-55% to-black opacity-40"
           ></div>
         </div>
-        <div class="custom-container h-screen flex items-center relative">
+        <div class="custom-container h-dvh flex items-center relative">
           <div>
             <div class="mb-25px">
               <h1 class="text-[32px] font-bold mb-[15px]">
@@ -71,7 +71,7 @@
             <a href="#portfolio" class="btn flex items-center gap-2.5 w-fit">
               Послушать
               <svg class="arrow">
-                <use href="/sprite.svg#arrow" />
+                <use href="./sprite.svg#arrow" />
               </svg>
             </a>
           </div>
@@ -80,7 +80,7 @@
             class="absolute bottom-10 right-1/2 translate-x-1/2 opacity-70 animate-bounce hover:opacity-100 cursor-pointer"
           >
             <svg class="fill-additional h-12.5 w-12.5">
-              <use href="/sprite.svg#scroll" />
+              <use href="./sprite.svg#scroll" />
             </svg>
           </a>
         </div>
@@ -91,7 +91,7 @@
             <h2 class="text-2xl">Обо мне</h2>
             <div>
               <svg class="h-full aspect-square fill-current">
-                <use href="/sprite.svg#person" />
+                <use href="./sprite.svg#person" />
               </svg>
             </div>
           </div>
@@ -110,10 +110,10 @@
               быстро и чисто. Звук для меня — часть интерфейса мира.
             </p>
           </div>
-          <a href="/about.html" class="link">
+          <a href="./about.html" class="link">
             Подробнее
             <svg class="arrow -rotate-90">
-              <use href="/sprite.svg#arrow" />
+              <use href="./sprite.svg#arrow" />
             </svg>
           </a>
         </div>
@@ -122,10 +122,10 @@
         <div class="custom-container py-12.5">
           <div class="flex justify-between mb-25px items-end">
             <h2 class="text-2xl font-semibold">Популярные услуги</h2>
-            <a class="link" href="/services.html">
+            <a class="link" href="./services.html">
               Все услуги
               <svg class="arrow -rotate-90">
-                <use href="/sprite.svg#arrow" />
+                <use href="./sprite.svg#arrow" />
               </svg>
             </a>
           </div>
@@ -147,10 +147,10 @@
         <div class="custom-container py-12.5">
           <div class="flex justify-between items-end mb-25px">
             <h2 class="text-2xl font-semibold">Портфолио</h2>
-            <a class="link" href="/portfolio.html">
+            <a class="link" href="./portfolio.html">
               Все работы
               <svg class="arrow -rotate-90">
-                <use href="/sprite.svg#arrow" />
+                <use href="./sprite.svg#arrow" />
               </svg>
             </a>
           </div>
@@ -173,10 +173,10 @@
             />
             <div class="flex-[1_1_400px] flex flex-col gap-25px items-center">
               <div class="flex flex-col gap-25px" data-review-container></div>
-              <a class="link" href="/reviews.html">
+              <a class="link" href="./reviews.html">
                 Все отзывы
                 <svg class="arrow -rotate-90">
-                  <use href="/sprite.svg#arrow" />
+                  <use href="./sprite.svg#arrow" />
                 </svg>
               </a>
             </div>
@@ -226,7 +226,7 @@
     </main>
     <footer class="bg-bg-secondary">
       <div
-        class="custom-container py-7.5 flex flex-wrap gap-25px justify-center items-center sm:justify-between"
+        class="custom-container py-7.5 flex flex-wrap gap-12.5 justify-center items-center md:justify-between"
       >
         <div class="flex gap-25px items-center flex-wrap justify-center">
           <h2 class="text-2xl text-additional">Контакты</h2>
@@ -244,14 +244,14 @@
                 <li>
                   <a href="https://web.telegram.org">
                     <svg class="fill-additional w-25px aspect-square">
-                      <use href="/sprite.svg#telegram" />
+                      <use href="./sprite.svg#telegram" />
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="https://www.tiktok.com/explore">
                     <svg class="fill-additional w-25px aspect-square">
-                      <use href="/sprite.svg#tiktok" />
+                      <use href="./sprite.svg#tiktok" />
                     </svg>
                   </a>
                 </li>
@@ -274,9 +274,9 @@
             </li>
           </ul>
         </div>
-        <a href="/" class="flex items-end gap-2.5 hover:opacity-100">
+        <a href="./" class="flex items-end gap-2.5 hover:opacity-100">
           <svg class="h-[35px] w-[35px] fill-current">
-            <use href="/sprite.svg#wave" />
+            <use href="./sprite.svg#wave" />
           </svg>
           <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
