--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <title>services</title>
   </head>
   <body
@@ -11,9 +11,9 @@
   >
     <header class="bg-bg-secondary fixed top-0 left-0 right-0 z-1">
       <div class="custom-container py-[15px] flex justify-between items-center">
-        <a href="/" class="flex items-end gap-2.5 z-20">
+        <a href="./" class="flex items-end gap-2.5 z-20">
           <svg class="h-[35px] w-[35px] fill-current">
-            <use href="/sprite.svg#wave" />
+            <use href="./sprite.svg#wave" />
           </svg>
           <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
@@ -62,7 +62,7 @@
             <div class="flex gap-2.5 font-semibold items-center mb-25px">
               <h2 class="text-2xl">Музыка</h2>
               <svg class="h-25px w-25px fill-current">
-                <use href="/sprite.svg#melody" />
+                <use href="./sprite.svg#melody" />
               </svg>
             </div>
             <div
@@ -76,7 +76,7 @@
             <div class="flex gap-2.5 font-semibold items-center mb-25px">
               <h2 class="text-2xl">Постпродакшн и саунд-дизайн</h2>
               <svg class="h-25px w-25px fill-current">
-                <use href="/sprite.svg#fader" />
+                <use href="./sprite.svg#fader" />
               </svg>
             </div>
             <div
@@ -90,7 +90,7 @@
             <div class="flex gap-2.5 font-semibold items-center mb-25px">
               <h2 class="text-2xl">Подкасты и речь</h2>
               <svg class="h-25px w-25px fill-current">
-                <use href="/sprite.svg#mic" />
+                <use href="./sprite.svg#mic" />
               </svg>
             </div>
             <div
@@ -104,7 +104,7 @@
             <div class="flex gap-2.5 font-semibold items-center mb-25px">
               <h2 class="text-2xl">Коммерческие аудиопроекты</h2>
               <svg class="h-25px w-25px fill-current">
-                <use href="/sprite.svg#megaphone" />
+                <use href="./sprite.svg#megaphone" />
               </svg>
             </div>
             <div
@@ -117,9 +117,9 @@
     </main>
     <footer class="bg-bg-secondary">
       <div
-        class="custom-container py-7.5 flex flex-wrap gap-25px justify-center items-center sm:justify-between"
+        class="custom-container py-7.5 flex flex-wrap gap-12.5 justify-center items-center md:justify-between"
       >
-        <div class="flex gap-25px items-center">
+        <div class="flex gap-25px items-center flex-wrap justify-center">
           <h2 class="text-2xl text-additional">Контакты</h2>
           <ul class="flex flex-col gap-2.5">
             <li>
@@ -135,14 +135,14 @@
                 <li>
                   <a href="https://web.telegram.org">
                     <svg class="fill-additional w-25px aspect-square">
-                      <use href="/sprite.svg#telegram" />
+                      <use href="./sprite.svg#telegram" />
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="https://www.tiktok.com/explore">
                     <svg class="fill-additional w-25px aspect-square">
-                      <use href="/sprite.svg#tiktok" />
+                      <use href="./sprite.svg#tiktok" />
                     </svg>
                   </a>
                 </li>
@@ -165,9 +165,9 @@
             </li>
           </ul>
         </div>
-        <a href="/" class="flex items-end gap-2.5 hover:opacity-100">
+        <a href="./" class="flex items-end gap-2.5 hover:opacity-100">
           <svg class="h-[35px] w-[35px] fill-current">
-            <use href="/sprite.svg#wave" />
+            <use href="./sprite.svg#wave" />
           </svg>
           <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
