made fonts optimization

--- a/contacts.html
+++ b/contacts.html
@@ -11,11 +11,10 @@
   >
     <header class="bg-bg-secondary fixed top-0 left-0 right-0 z-1">
       <div class="custom-container py-[15px] flex justify-between items-center">
-        <a href="./" class="flex items-end gap-2.5 z-20">
-          <svg class="h-[35px] w-[35px] fill-current">
-            <use href="./sprite.svg#wave" />
+        <a href="./">
+          <svg class="h-[35px] w-[183px]">
+            <use href="./sprite.svg#logo" />
           </svg>
-          <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
         <button
           data-burger-button
@@ -138,11 +137,10 @@
             </li>
           </ul>
         </div>
-        <a href="./" class="flex items-end gap-2.5 hover:opacity-100">
-          <svg class="h-[35px] w-[35px] fill-current">
-            <use href="./sprite.svg#wave" />
+        <a href="./">
+          <svg class="h-[35px] w-[183px]">
+            <use href="./sprite.svg#logo" />
           </svg>
-          <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
       </div>
     </footer>
