--- a/about.html
+++ b/about.html
@@ -6,19 +6,18 @@
     <link rel="icon" type="image/svg+xml" href="./vite.svg" />
 
     <title>services</title>
-    <script type="module" crossorigin src="/soundengineer-website/assets/main-BEkp6O1d.js"></script>
-    <link rel="stylesheet" crossorigin href="/soundengineer-website/assets/main-D6Fgb5V6.css">
+    <script type="module" crossorigin src="/soundengineer-website/assets/main-Cnp8N0kj.js"></script>
+    <link rel="stylesheet" crossorigin href="/soundengineer-website/assets/main-B6b6HZDu.css">
   </head>
   <body
     class="bg-bg-primary text-white font-montserrat pt-[65px] min-h-screen flex flex-col"
   >
     <header class="bg-bg-secondary fixed top-0 left-0 right-0 z-1">
       <div class="custom-container py-[15px] flex justify-between items-center">
-        <a href="./" class="flex items-end gap-2.5 z-20">
-          <svg class="h-[35px] w-[35px] fill-current">
-            <use href="./sprite.svg#wave" />
+        <a href="./">
+          <svg class="h-[35px] w-[183px]">
+            <use href="./sprite.svg#logo" />
           </svg>
-          <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
         <button
           data-burger-button
@@ -237,11 +236,10 @@
             </li>
           </ul>
         </div>
-        <a href="./" class="flex items-end gap-2.5 hover:opacity-100">
-          <svg class="h-[35px] w-[35px] fill-current">
-            <use href="./sprite.svg#wave" />
+        <a href="./">
+          <svg class="h-[35px] w-[183px]">
+            <use href="./sprite.svg#logo" />
           </svg>
-          <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
       </div>
     </footer>
