--- a/index.html
+++ b/index.html
@@ -5,22 +5,21 @@
     <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>soundengineer-website</title>
-    <script type="module" crossorigin src="/soundengineer-website/assets/main-tUX2Ed-7.js"></script>
-    <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/main-BEkp6O1d.js">
+    <script type="module" crossorigin src="/soundengineer-website/assets/main-CEO7gfbE.js"></script>
+    <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/main-Cnp8N0kj.js">
     <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/renderUtils-CQWDP5it.js">
     <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/modalUtils-DrQWLGV4.js">
-    <link rel="stylesheet" crossorigin href="/soundengineer-website/assets/main-D6Fgb5V6.css">
+    <link rel="stylesheet" crossorigin href="/soundengineer-website/assets/main-B6b6HZDu.css">
   </head>
   <body
     class="bg-bg-primary text-white font-montserrat min-h-screen flex flex-col"
   >
     <header class="bg-bg-secondary fixed top-0 left-0 right-0 z-1">
       <div class="custom-container py-[15px] flex justify-between items-center">
-        <a href="./" class="flex items-end gap-2.5 z-20">
-          <svg class="h-[35px] w-[35px] fill-current">
-            <use href="./sprite.svg#wave" />
+        <a href="./">
+          <svg class="h-[35px] w-[183px]">
+            <use href="./sprite.svg#logo" />
           </svg>
-          <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
         <button
           data-burger-button
@@ -173,6 +172,7 @@
           >
             <img
               class="aspect-square max-w-[470px] min-w-3/7 flex-1 rounded-[20px] object-cover"
+              loading="lazy"
               src="/soundengineer-website/disk.jpeg"
               alt="CD-диск"
             />
@@ -279,11 +279,10 @@
             </li>
           </ul>
         </div>
-        <a href="./" class="flex items-end gap-2.5 hover:opacity-100">
-          <svg class="h-[35px] w-[35px] fill-current">
-            <use href="./sprite.svg#wave" />
+        <a href="./">
+          <svg class="h-[35px] w-[183px]">
+            <use href="./sprite.svg#logo" />
           </svg>
-          <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
       </div>
     </footer>
