--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
     <link rel="icon" type="image/svg+xml" href="./vite.svg" />
 
     <title>services</title>
-    <script type="module" crossorigin src="/soundengineer-website/assets/main-Cnp8N0kj.js"></script>
-    <link rel="stylesheet" crossorigin href="/soundengineer-website/assets/main-B6b6HZDu.css">
+    <script type="module" crossorigin src="/soundengineer-website/assets/main-BGcqa9w5.js"></script>
+    <link rel="stylesheet" crossorigin href="/soundengineer-website/assets/main-D0_h17rG.css">
   </head>
   <body
     class="bg-bg-primary text-white font-montserrat pt-[65px] min-h-screen flex flex-col"
@@ -96,14 +96,14 @@
             </div>
             <img
               class="flex-1 object-cover w-112.5 object-center"
-              src="/soundengineer-website/photo1.jpg"
+              src="./photo1.webp"
               alt="Я в студии приложил наушник к уху"
             />
           </div>
           <div class="flex flex-wrap-reverse gap-25px">
             <img
               class="flex-1 object-cover w-112.5 object-center"
-              src="/soundengineer-website/photo2.jpg"
+              src="./photo2.webp"
               alt="Я в студии, повернут к камере"
             />
             <div class="flex-1 basis-6/12 flex flex-col gap-[15px]">
