--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>soundengineer-website</title>
-    <script type="module" crossorigin src="/soundengineer-website/assets/main-CEO7gfbE.js"></script>
-    <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/main-Cnp8N0kj.js">
-    <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/renderUtils-CQWDP5it.js">
+    <script type="module" crossorigin src="/soundengineer-website/assets/main-B33ZMyDJ.js"></script>
+    <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/main-BGcqa9w5.js">
+    <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/renderUtils-C2q5G_u-.js">
     <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/modalUtils-DrQWLGV4.js">
-    <link rel="stylesheet" crossorigin href="/soundengineer-website/assets/main-B6b6HZDu.css">
+    <link rel="stylesheet" crossorigin href="/soundengineer-website/assets/main-D0_h17rG.css">
   </head>
   <body
     class="bg-bg-primary text-white font-montserrat min-h-screen flex flex-col"
@@ -173,7 +173,7 @@
             <img
               class="aspect-square max-w-[470px] min-w-3/7 flex-1 rounded-[20px] object-cover"
               loading="lazy"
-              src="/soundengineer-website/disk.jpeg"
+              src="./disk.webp"
               alt="CD-диск"
             />
             <div class="flex-[1_1_400px] flex flex-col gap-25px items-center">
