added images optimization

--- a/about.html
+++ b/about.html
@@ -94,14 +94,14 @@
             </div>
             <img
               class="flex-1 object-cover w-112.5 object-center"
-              src="/photo1.jpg"
+              src="./photo1.webp"
               alt="Я в студии приложил наушник к уху"
             />
           </div>
           <div class="flex flex-wrap-reverse gap-25px">
             <img
               class="flex-1 object-cover w-112.5 object-center"
-              src="/photo2.jpg"
+              src="./photo2.webp"
               alt="Я в студии, повернут к камере"
             />
             <div class="flex-1 basis-6/12 flex flex-col gap-[15px]">
