--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <img
               class="aspect-square max-w-[470px] min-w-3/7 flex-1 rounded-[20px] object-cover"
               loading="lazy"
-              src="/disk.jpeg"
+              src="./disk.webp"
               alt="CD-диск"
             />
             <div class="flex-[1_1_400px] flex flex-col gap-25px items-center">
